// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the BaseLinkButton matches the snapshot 1`] = `
<a
  className="sc-gZMcBi caVfpb sc-iwsKbI ANExe sc-dnqmqq hpxHJh sc-htoDjs vOazz sc-gzVnrw inKRYv"
>
  LinkButtonValue
</a>
`;

exports[`the LinkButton matches the snapshot 1`] = `
<a
  className="sc-gqjmRU eOiadv sc-gZMcBi caVfpb sc-iwsKbI ANExe sc-dnqmqq hpxHJh sc-htoDjs vOazz sc-gzVnrw inKRYv"
>
  LinkButtonValue
</a>
`;
